# genmab_assignment

./: .gitignore  README.md  script.sh
step1-infrastructure/: README.md
step1-infrastructure/scripts/: deploy.sh  destroy.sh
step1-infrastructure/terraform/: backend.conf  main.tf  outputs.tf  variables.tf
step2-model-build-deploy/: README.md  pyproject.toml  run_pipeline.sh
step2-model-build-deploy/notebooks/: Customer_Segmentation_GenMab.ipynb
step2-model-build-deploy/src/: config.py  deploy_lambda.py  inference.py  pipeline.py  pipeline_config.yaml  preprocessing.py  train.py
step2-model-build-deploy/test/: test.py
task3-genai-lambda/: README.md  deploy_lambda.py  pyproject.toml  test_lambda.sh
task3-genai-lambda/src/: lambda_handler.py
